# DeepInflation-pq

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  agent.py  app.py  encyclopedia_rag.py  inflation.py  pyproject.toml  requirements.txt  setup_julia.py  sr_search.py  tools.py
data/: bk18_planck_posterior.npz  inflation_list.json
data/models/: Arctan Inflation (AI).md  Axion Hilltop Inflation (AHI).md  Basic Equation.md  Brane Inflation (BI).md  Brane SUSY Breaking Inflation (BSUSYBI).md  Colemann-Weinberg Inflation (CWI).md  Constant Spectrum Inflation (CSI).md  Constant nS A Inflation (CNAI).md  Constant nS B Inflation (CNBI).md  Constant nS C Inflation (CNCI).md  Constant nS D Inflation (CNDI).md  Cubicly Corrected Starobinsky Inflation (CCSI).md  Double Exponential Inflation (DEI).md  Double-Well Inflation (DWI).md  Dual Inflation (DI).md  Dynamical Supersymmetric Inflation (DSI).md  Exponential SUSY Inflation (ESI).md  Fibre Inflation (FI).md  Generalized Double Well Inflation (GDWI).md  Generalized MSSM Inflation (GMSSMI).md  Generalized Mixed Inflation (GMLFI).md  Generalized Renormalizable Point Inflation (GRIPI).md  Higgs Inflation (HI).md  Horizon Flow Inflation at first order (HF1I).md  Hybrid Natural Inflation (HNI).md  Hyperbolic Inflation (HBI).md  Intermediate Inflation (II).md  Inverse Monomial Inflation (IMI).md  Kähler Moduli Inflation I (KMII).md  Kähler Moduli Inflation II (KMIII).md  LICENSE  (+45 more)
deepinflation/: __init__.py  agent.py  encyclopedia_rag.py  inflation.py  sr_search.py  tools.py
learningnotes/: code_structure_analysis.md
